# ros2_track_sdf

./: CMakeLists.txt  README.md  package.xml  ripple.world  ripple_sdf_case.py  run.sh
msg/: StudentSpec.msg
scripts/: student_pub.py  ta_sub.py
track_with_ripple/: model.config  track_with_ripple.sdf
